@@ -218,7 +218,7 @@ def get_mappings(anime_id, send_id):
 
 def get_mapping_ids(anime_id, send_id):
     with SQL(control.mappingDB) as cursor:
-        cursor.execute(f'SELECT mal_id, mal_dub_id, anilist_id, kitsu_id, anidb_id, thetvdb_id, themoviedb_id, imdb_id, trakt_id FROM anime WHERE {send_id}=?', (anime_id,))
+        cursor.execute(f'SELECT mal_id, mal_dub_id, anilist_id, kitsu_id, anidb_id, simkl_id, thetvdb_id, themoviedb_id, imdb_id, trakt_id FROM anime WHERE {send_id}=?', (anime_id,))
         mappings = cursor.fetchone()
         if mappings:
             mappings_dict = {
@@ -227,6 +227,7 @@ def get_mapping_ids(anime_id, send_id):
                 'anilist_id': mappings.get('anilist_id'),
                 'kitsu_id': mappings.get('kitsu_id'),
                 'anidb': mappings.get('anidb_id'),
+                'simkl': mappings.get('simkl_id'),
                 'tvdb': mappings.get('thetvdb_id'),
                 'tmdb': mappings.get('themoviedb_id'),
                 'imdb': mappings.get('imdb_id'),
