@@ -1,3 +1,7 @@
+Changelog v5.2.38 (2025-07-29):
+- Fix Bug with Playlist
+- Added Mapping to Database
+
 Changelog v5.2.37 (2025-07-27):
 - Fix Quick Setting Default
 
